[package]
name = "flue"
version = "0.2.0"
edition = "2021"
description = "An efficient and secure actor runtime library."
license = "AGPL-3.0-or-later"
repository = "https://github.com/hearth-rs/flue"

[dependencies]
bitflags = "2.4.0"
flume = "0.11.0"
parking_lot = "0.12.1"
sharded-slab = "0.1.4"
slab = "0.4.9"
tokio = {version = "1.32.0", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1.32.0", features = ["macros"] }
